Avoid tooltip overflow

--- a/src/css/app.sass
+++ b/src/css/app.sass
@@ -1158,7 +1158,7 @@ h4#signature
   padding: 48px
   margin: 24px auto
   min-width: 360px
-  // overflow: hidden
+  overflow: hidden
   position: relative
   @media (max-width: $breakpoint-sm-max)
     display: flex
@@ -1317,7 +1317,7 @@ h4#signature
   width: 25%
   @media (max-width: $breakpoint-sm-max)
     margin-top: 16px
-    order: 2
+    order: 5
     width: 100%
 
 
